--- a/.env.exemple.local
+++ b/.env.exemple.local
@@ -1,7 +1,9 @@
 # Stripe
 STRIPE_API_KEY=
+NEXT_PUBLIC_STRIPE_KEY_PUBLIC=
 STRIPE_SUCCESS_URL=
 STRIPE_CANCEL_URL=
+STRIPE_PRICE_ID=
 
 # Github
 GITHUB_ID=
